# sharedobjects

./: .gitignore  CMakeLists.txt  Doxyfile  README.txt
SharedObjects_vsstudio/SharedObjects/: ReadMe.txt  SharedObjects.vcxproj  SharedObjects.vcxproj.filters
docs/: GoogleTestScenarios.txt
docs/doxygen/html/: _locking_shared_object_8hpp_source.html  _logging_shared_object_8hpp_source.html  _not_copyable_8hpp_source.html  _shared_object_8hpp_source.html  annotated.html  class_locking_shared_object-members.html  class_locking_shared_object.html  class_logging_shared_object-members.html  class_logging_shared_object.html  class_not_copyable-members.html  class_not_copyable.html  class_shared_object-members.html  class_shared_object.html  class_shared_object_1_1_accessor-members.html  class_shared_object_1_1_accessor.html  classes.html  dir_5696d38e49dfb1e9025bc6475a165e5c.html  dir_94b9f2dbd429697cd6513114a33a5776.html  dir_9ca7da673aa1b7ace4d3a115a5e8cb6c.html  files.html  functions.html  functions_func.html  hierarchy.html  index.html
docs/doxygen/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  functions_0.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_7.js  searchdata.js
docs/doxygen/latex/: annotated.tex  class_locking_shared_object.eps  class_locking_shared_object.tex  class_logging_shared_object.eps  class_logging_shared_object.tex  class_not_copyable.eps  class_not_copyable.tex  class_shared_object.eps  class_shared_object.tex  class_shared_object_1_1_accessor.eps  class_shared_object_1_1_accessor.tex  dir_5696d38e49dfb1e9025bc6475a165e5c.tex  dir_94b9f2dbd429697cd6513114a33a5776.tex  dir_9ca7da673aa1b7ace4d3a115a5e8cb6c.tex  hierarchy.tex  refman.tex
example/: main.cpp
source/include/: LockingSharedObject.hpp  LoggingSharedObject.hpp  NotCopyable.hpp  SharedObject.hpp
source/src/: Main.cpp
src/: LockingSharedObject.cpp  LockingSharedObject.hpp  LockingSharedObjects.cpp  LockingSharedObjects.hpp  LoggingSharedObject.hpp  Main.cpp  NotCopyable.hpp  SharedObject.cpp  SharedObject.hpp  SharedObjects.cpp  SharedObjects.hpp
test/: LockingSharedObjectTest.cpp  LoggingSharedObjectTest.cpp
